--- a/style.css
+++ b/style.css
@@ -1,116 +1,50 @@
-/* ------------- FONTS ------------- */ 
-@font-face {
-  font-family: 'test';
-  src: url('test.woff') format('woff');
-}
-
-/* ------------- STARTER ------------- */ 
-
-*{
-  margin:0;
-  padding:0;
-}
-
 body {
-	background-color: #252934;
-	color: white;
+	background-color: #383c4a;
+	color: #5294e2;
 }
 
-/* ------------- TRANSITIONS AND SHADOWS ------------- */
 
-a, a:visited, a:hover, .box .box-container:hover, .box .box-container {
-	-webkit-transition: all 150ms ease-in-out;
-	-moz-transition: all 150ms ease-in-out;
-	-ms-transition: all 150ms ease-in-out;
-	-o-transition: all 150ms ease-in-out;
-	transition: all 150ms ease-in-out;
+.time {
+    text-align: center;
+    font-family: 'Press Start 2P';
+    font-size: 60;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
-.box .box-container:hover {
-	-webkit-box-shadow: 4px 4px 15px -5px rgba(0,0,0,0.75);
-	-moz-box-shadow: 4px 4px 15px -5px rgba(0,0,0,0.75);
-	box-shadow: 4px 4px 15px -5px rgba(0,0,0,0.75);
+.heading{
+    margin: 10px 0 15px 0px;
+    font-family: 'Inconsolata', monospace;
+    font-size: 20;
 }
 
-.container form, .box .box-container {
-	-webkit-box-shadow: 4px 4px 15px -5px rgba(0,0,0,0.25);
-	-moz-box-shadow: 4px 4px 15px -5px rgba(0,0,0,0.25);
-	box-shadow: 4px 4px 15px -5px rgba(0,0,0,0.25);
-}
-
-/* ------------- CONTAINER STYLING ------------- */ 
-
-.container {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	min-height: 100vh;
-}
-
-/* ------------- LINK STYLING ------------- */ 
-
-a, a:visited {
-	color: #6C7789;
-}
-
-a:hover {
-	color: white;
-}
-
-a, a:visited, a:hover {
-	text-decoration: none;
-	
-}
-
-.box .box-container .link {
-	font-family: 'test';
-	font-size: 28px;
-	padding: 20px 0 0 15px;
-	text-align: left;
-}
-
-/* ------------- TIME STYLING ------------- */ 
-
-.container .time {
-	font-family: 'test';
-	font-size: 120px;
-	margin-bottom: 20px;
-}
-
-/* ------------- BOX STYLING ------------- */ 
 
 .box {
-	width:auto;
-}
-
-.box .box-container {
-	background-color: #2E3441;
-	width: 200px;
-	height: 220px;
-	float: left;
+	background-color: #404552;
 	border-radius: 5px;
+    margin-top: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-bottom: 10px;
 }
 
-.box .box-container:not(:last-child) {
-	margin-right: 50px;
+.box .link{
+    margin-bottom: 10px;
 }
 
-.box .box-container .heading {
-	margin: 25px 0 9px 15px;
-	font-family: 'test';
-	font-size: 33px;
-	text-align: left;
+.box a{
+    color: #7c818c;
 }
 
-/* ------------- SEARCH STYLING ------------- */ 
+.box a:hover {
+    color: white;
+    text-decoration: none;
+}
+
 
 .container form {
-	background-color: #2E3441;
+	background-color: #404552;
 	border-radius: 5px;
-	width: 450px;
-	margin-bottom: 80px;
 }
 
 .container form .search-field, .container form .search-submit {
@@ -126,13 +60,10 @@ a, a:visited, a:hover {
 	padding-left: 15px;
 	color: white;
 	font-size: 30px;
-	font-family: 'test';
-	bottom: -1px;
 }
 
 .container form .search-submit {
 	width: 10%;
-	top: 5px;
 }
 
 .container form .search-submit:hover {
@@ -149,19 +80,4 @@ a, a:visited, a:hover {
 	position:absolute;
 	right:15px;
 	bottom: -3px;
-}
-
-
-/* ------------- MEDIA QUERY ------------- */ 
-
-@media only screen and (max-width: 985px) {
-	.box-container:nth-child(4), .box-container:nth-child(3) {
-		margin-top: 50px;
-	}
-	.box .box-container:nth-child(2), .box .box-container:nth-child(4) {
-		margin-right: 0;
-	}
-	.box {
-		width: 450px;
-	}  
 }
