NOISSUE: change font for clock

--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
 
 .time {
     text-align: center;
-    font-family: 'Press Start 2P';
-    font-size: 60;
+    font-family: 'ZCOOL QingKe HuangYou';
+    font-size: 80;
     margin-top: 20px;
     margin-bottom: 20px;
 }
